--- a/installer/roles/image_build/templates/Dockerfile.j2
+++ b/installer/roles/image_build/templates/Dockerfile.j2
@@ -23,9 +23,10 @@ ENV LC_ALL en_US.UTF-8
 USER root
 
 # Install build dependencies
+RUN dnf -y module enable 'postgresql:12'
 RUN dnf -y update && \
     dnf -y install epel-release 'dnf-command(config-manager)' && \
-    dnf module -y enable 'postgresql:10' && \
+    dnf module -y enable 'postgresql:12' && \
     dnf config-manager --set-enabled powertools && \
     dnf -y install ansible \
     gcc \
@@ -40,7 +41,7 @@ RUN dnf -y update && \
     nss \
     openldap-devel \
     patch \
-    @postgresql:10 \
+    @postgresql:12 \
     postgresql-devel \
     python3-devel \
     python3-pip \
@@ -112,10 +113,12 @@ RUN dnf -y install \
     npm install -g n && n 14.15.1 && dnf remove -y nodejs
 {% endif %}
 
+
 # Install runtime requirements
+RUN dnf -y module enable 'postgresql:12'
 RUN dnf -y update && \
     dnf -y install epel-release 'dnf-command(config-manager)' && \
-    dnf module -y enable 'postgresql:10' && \
+    dnf module -y enable 'postgresql:12' && \
     dnf config-manager --set-enabled powertools && \
     dnf -y install acl \
     ansible \
@@ -126,7 +129,7 @@ RUN dnf -y update && \
     krb5-workstation \
     libcgroup-tools \
     nginx \
-    @postgresql:10 \
+    @postgresql:12 \
     python3-devel \
     python3-libselinux \
     python3-pip \
